# zSearch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Macros.cmake  README.md
PyTests/: test_local_dir.py
Tests/: CMakeLists.txt  test1.cpp
cZSearch/: CMakeLists.txt  Version.h.in  cZSearch.cpp
zSearch/: CMakeLists.txt  zSearch.h
zSearch/Tests/: CMakeLists.txt  test1.cpp  test2.cpp  testCurrentDir.cpp  testEmptyDir.cpp  testLocalDir.cpp
zSearch/ZSearch/: CMakeLists.txt  Version.h.in  dllmain.cpp  zSearch.cpp  zSearch.h
zSearch/cZSearch/: CMakeLists.txt  Version.h.in  cZSearch.cpp
zSearch/zSearch/: CMakeLists.txt  dllmain.cpp  zSearch.cpp  zSearch.h
